--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 /Makefile -text
 /apertium-lit.lit.dix -text
+texts/lietuvos_tsr1.handtagged.Augustus.txt -text
 texts/lietuvos_tsr1.raw.txt -text
 texts/lietuvos_tsr1.tagged.txt -text
