--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,8 @@
 texts/lietuvos_tsr1.handtagged.Augustus.txt -text
 texts/lietuvos_tsr1.raw.txt -text
 texts/lietuvos_tsr1.tagged.txt -text
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
